Diversas adaptações para o programa funcionar também no Windows